Update genetic algorithm execution counts and fitness values

--- a/TGS_M5_SC_5210411257.ipynb
+++ b/TGS_M5_SC_5210411257.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,23 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generasi 0: Fitness Terbaik = 1128620\n",
-      "Generasi 1: Fitness Terbaik = 1565600\n",
-      "Generasi 2: Fitness Terbaik = 1699500\n",
-      "Generasi 3: Fitness Terbaik = 1699500\n",
-      "Generasi 4: Fitness Terbaik = 1699500\n",
-      "Generasi 5: Fitness Terbaik = 1802500\n",
-      "Generasi 6: Fitness Terbaik = 1915800\n",
-      "Generasi 7: Fitness Terbaik = 1915800\n",
-      "Generasi 8: Fitness Terbaik = 1915800\n",
-      "Generasi 9: Fitness Terbaik = 1915800\n"
+      "Generasi 0: Fitness Terbaik = 1380200\n",
+      "Generasi 1: Fitness Terbaik = 1600620\n",
+      "Generasi 2: Fitness Terbaik = 1761300\n",
+      "Generasi 3: Fitness Terbaik = 1761300\n",
+      "Generasi 4: Fitness Terbaik = 1761300\n",
+      "Generasi 5: Fitness Terbaik = 1878200\n",
+      "Generasi 6: Fitness Terbaik = 1802500\n",
+      "Generasi 7: Fitness Terbaik = 1878200\n",
+      "Generasi 8: Fitness Terbaik = 1802500\n",
+      "Generasi 9: Fitness Terbaik = 1878200\n"
      ]
     }
    ],
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tim Kecerdasan: Ziva, Naufal, Zayn\n",
-      "Tim Ketangkasan: Mikael, Kaelan, Freya\n",
-      "Fitness Terbaik: 1915800\n"
+      "Tim Kecerdasan: Ziva, Naufal, Kaelan\n",
+      "Tim Ketangkasan: Mikael, Zayn, Freya\n",
+      "Fitness Terbaik: 1878200\n"
      ]
     }
    ],
